Math answers json

--- a/popup.html
+++ b/popup.html
@@ -32,7 +32,7 @@
         <div class="popup-footer">
 
         </div>
-        <script src="popup.js"></script>
+        <script type="module"  src="popup.js"></script>
     </body>
 </html>
 
