Last stable tested version

--- a/popup.html
+++ b/popup.html
@@ -39,9 +39,10 @@
                 <a style="cursor:pointer" href="https://www.facebook.com/anas.chamkh.56/" target="_blank" ><img src="images/akar-icons_facebook-fill.svg" alt="Facebook icon"></a>
                 
                 <div class="drink-support">
-                <h6>Buy me a drink : <a href="https://ko-fi.com/youcode_test_solver_extension"  target="_blank" >&#127866
+                <h6>Buy me a drink : </h6>
+                <a href="https://ko-fi.com/youcode_test_solver_extension"  target="_blank" ><img  id="wine" src="images/drink.svg" alt="wine icon">
+
                 </a>
-                </h6>
                 </div>
 
             </div>
