Extension with buymecoffe account

--- a/popup.html
+++ b/popup.html
@@ -32,15 +32,15 @@
         <div class="popup-footer">
             <div class="footer-infos">
                 <h6>Made by   	
-                    <span> &#9773; Anaschamkhi &#9773;	</span> 
+                    <span>  &#10024; Anaschamkhi  &#10024;</span> 
                 </h6>
                 <a style="cursor:pointer" href="https://github.com/ChamkhiAnas" target="_blank"><img src="images/bi_github.svg" alt="Github icon"></a>
-                <a style="cursor:pointer" href="https://github.com/ChamkhiAnas" target="_blank"><img style="width:26px" src="images/entypo-social_linkedin-with-circle.svg" alt="Linkedin icon"></a>
+                <a style="cursor:pointer" href="https://www.linkedin.com/in/anaschamkhi/" target="_blank"><img style="width:26px" src="images/entypo-social_linkedin-with-circle.svg" alt="Linkedin icon"></a>
                 <a style="cursor:pointer" href="https://www.facebook.com/anas.chamkh.56/" target="_blank" ><img src="images/akar-icons_facebook-fill.svg" alt="Facebook icon"></a>
                 
                 <div class="drink-support">
-                <h6>Buy me a drink : </h6>
-                <a href="https://ko-fi.com/youcode_test_solver_extension"  target="_blank" ><img  id="wine" src="images/drink.svg" alt="wine icon">
+                <a href="https://www.buymeacoffee.com/Anaschamkh"  target="_blank"><h6>Buy me a drink : </h6></a>
+                <a  ><img  id="wine" src="images/drink.svg" alt="wine icon">
 
                 </a>
                 </div>
